--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home</title>
 </head>
 <body>
-    test 
+    <h1>Exercise - 3</h1>
+    <a href="./login-form.html">Login form</a>
+    <a href="./registration-form.html">Registration form</a>
+    <a href="credit-card.html">Credit Card validation</a>
 </body>
 </html>
