Update registration form and organize pages
Development of registration form has been completed. The registration
form includes an input check and a good design. Other pages have been
organized in a better manner.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <a href="./login-form.html">Login form</a>
     <a href="./registration-form.html">Registration form</a>
     <a href="credit-card.html">Credit Card validation</a>
+    <h2>Patch notes</h2>
+    <ul>
+        <li>Only the registration-form works for now.</li>
+    </ul>
 </body>
 </html>
