--- a/validated.html
+++ b/validated.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Validated</title>
 </head>
 <body>
-    <h1>Development in progress!</h1>
+    <h1>Your information was saved and sold to the government.</h1>
 </body>
 </html>
